revamp typographic styles
switched to 16px / 24px baseline grid, implemented a 16px/72px @ 1:1.5
modular scale

--- a/index.html
+++ b/index.html
@@ -90,19 +90,26 @@
     <!-- for development, remove before final deployment -->
     <script src="js/live.js"></script>
     <script src="js/less-1.1.5.min.js"></script>
-    <script>less.env="development"; less.watch();</script>
+    <script type="text/javascript">
+         less.env = "development";
+         less.watch();
+    </script>
 </head>
 
 <body>
 
 <div class="bgdiv"></div>
 
-<h1>Heading 1, "Inch"</h1>
-<h2>Heading 2, "Canon"</h2>
-<h3>Heading 3, Double "Great Primer"</h3>
-<h4>Heading 4, "Double Pica"</h4>
-<h5>Heading 5, "Great Primer"</h5>
-<h6>Heading 6, "Augustin"</h6>
+<h1>Heading One, &ldquo;Inch&rdquo;</h1>
+<h2>Heading Two, "Canon"</h2>
+<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
+<h3>Heading Three, Double "Great Primer"</h3>
+<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
+<h4>Heading Four, "Double Pica"</h4>
+<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
+<h5>Heading Five, "Great Primer"</h5>
+<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
+<h6>Heading Six, "Augustin"</h6>
 
 <p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
 
