finished type styles, starting grid & structure

--- a/index.html
+++ b/index.html
@@ -100,42 +100,84 @@
 
 <div class="bgdiv"></div>
 
-<h1>Heading One, &ldquo;Inch&rdquo;</h1>
-<h2>Heading Two, "Canon"</h2>
-<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
-<h3>Heading Three, Double "Great Primer"</h3>
-<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
-<h4>Heading Four, "Double Pica"</h4>
-<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
-<h5>Heading Five, "Great Primer"</h5>
-<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
-<h6>Heading Six, "Augustin"</h6>
+<h1>Heading One, &ldquo;Alpha&rdquo;</h1>
+<h2>Heading Two, &ldquo;Beta&rdquo;</h2>
+<h3>Heading Three, &ldquo;Gamma&rdquo;</h3>
+<h4>Heading Four, &ldquo;Delta&rdquo;</h4>
+<h5>Heading Five, &ldquo;Epsilon&rdquo;</h5>
+<h6>Heading Six, &ldquo;Zeta&rdquo;</h6>
 
-<p>Paragraph, Pica. Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
+<p>Paragraph. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
 
 <pre><code class="css">
-    &lt;meta charset=&quot;utf-8&quot;&gt;    
-    &lt;!-- force best rendering from IE: http://html5boilerplate.com/docs/The-markup/#make-sure-the-latest-version-of-ie-is-used --&gt;
-    &lt;!-- should use .htaccess and remove this line: h5bp.com/b/378 --&gt;
-	&lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge,chrome=1&quot;&gt;
+&lt;meta charset=&quot;utf-8&quot;&gt;    
+&lt;!-- force best rendering from IE: http://html5boilerplate.com/docs/The-markup/#make-sure-the-latest-version-of-ie-is-used --&gt;
+&lt;!-- should use .htaccess and remove this line: h5bp.com/b/378 --&gt;
+&lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge,chrome=1&quot;&gt;
 </code></pre>
 
-<p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-
-<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
-
+<p>Semantic presentational elements.
+    <i>This is an example of the <code>&lt;i&gt;</code> element.</i>
+    <b>This is an example of the <code>&lt;b&gt;</code> element.</b>
+    <em>This is an <code>&lt;em&gt;</code> element.</em>
+    <strong>This is a <code>&lt;strong&gt;</code> element.</strong>
+    <small>This is an example of the <code>&lt;small&gt;</code> element.</small>
+    <mark>This is an example of the <code>&lt;mark&gt;</code> element.</mark>
+</p>
+						
 <ul>
-    <li>Stuff &amp; Things</li>
-    <li>More o' dat</li>
-    <li>Stuff again</li>
+	<li>List item 01</li>
+	<li>List item 02</li>
+	<li>List item 03
+		<ul>
+			<li>List item level 2</li>
+			<li>List item level 2
+				<ul>
+					<li>List item level 3</li>
+					<li>List item level 3</li>
+				</ul>
+			</li>
+
+		</ul>
+	</li>
 </ul>
 
+<ol>
+	<li>List item</li>
+	<li>List item</li>
+	<li>List item
+		<ol>
+			<li>List item level 2</li>
+			<li>List item level 2
+				<ol>
+					<li>List item level 3</li>
+					<li>List item level 3</li>
+				</ol>
+			</li>
+		</ol>
+	</li>
+</ol>
+
+<dl>
+	<dt>Definition list title</dt>
+	   <dd>Definition list data</dd>
+	<dt>Definition list title</dt>
+	   <dd>Definition list data</dd>
+	<dt>Definition list title</dt>
+	   <dd>Definition list data</dd>
+</dl>	       
+
+<blockquote>Pellentesque habitant morbi tristiq feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</blockquote>
+
+<q>Pellentesque habitant morbi tristique senectus <q>et netus et malesuada fames ac</q> turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</q>
 
 <!-- JavaScript at the bottom for fast page loading -->
 
 <!-- include jquery from google servers, fall back to local if necessary: http://html5boilerplate.com/docs/The-markup/#google-cdn-for-jquery -->
+<!--
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+-->
 
 
 <!-- all plugins and all scripts in one file each, to minimize http requests: http://html5boilerplate.com/docs/plugins.js-and-script.js -->
