Establishing grid, implementing typekit FOUT-buster

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 
 <div class="bgdiv"></div>
 
+<div id="wrap">
+
 <h1>Heading One, &ldquo;Alpha&rdquo;</h1>
 <h2>Heading Two, &ldquo;Beta&rdquo;</h2>
 <h3>Heading Three, &ldquo;Gamma&rdquo;</h3>
@@ -170,6 +172,47 @@
 <blockquote>Pellentesque habitant morbi tristiq feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</blockquote>
 
 <q>Pellentesque habitant morbi tristique senectus <q>et netus et malesuada fames ac</q> turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</q>
+
+			<figure id="grid">
+				<div class="col col1"></div>
+				<div class="col col2"></div>
+				<div class="col col3"></div>
+				<div class="col col4"></div>
+				<div class="col col5"></div>
+				<div class="col col6"></div>
+				<div class="col col7"></div>
+				<div class="col col8"></div>
+				<div class="col col9"></div>
+				<div class="col col10"></div>
+				<div class="col col11"></div>
+				<div class="col col12"></div>
+				<div class="col col13"></div>
+				<div class="col col14"></div>
+				<div class="col col15"></div>
+				<div class="col col16"></div>
+				<div class="col col17"></div>
+				<div class="col col18"></div>
+				<div class="col col19"></div>
+				<div class="col col20"></div>
+				<div class="col col21"></div>
+				<div class="col col22"></div>
+				<div class="col col23"></div>
+				<div class="col col24"></div>
+				<div class="col col25"></div>
+				<div class="col col26"></div>
+				<div class="col col27"></div>
+				<div class="col col28"></div>
+				<div class="col col29"></div>
+				<div class="col col30"></div>
+				<div class="col col31"></div>
+				<div class="col col32"></div>
+				<div class="col col33"></div>
+				<div class="col col34"></div>
+				<div class="col col35"></div>
+				<div class="col col36"></div>
+			</figure>
+			
+</div> <!-- end wrap -->
 
 <!-- JavaScript at the bottom for fast page loading -->
 
