got typekit FOUT-busting working

--- a/index.html
+++ b/index.html
@@ -68,11 +68,18 @@
 <!-- 	<script>fbg.hideFOUT('asap', 300);</script> -->
 	
     <!-- webfonts via typekit -->
-    <script type="text/javascript">
+<script type="text/javascript">
   TypekitConfig = {
     kitId: 'too1ubd',
+    scriptTimeout: 3000
   };
   (function() {
+    var h = document.getElementsByTagName('html')[0];
+    h.className += ' wf-loading';
+    var t = setTimeout(function() {
+      h.className = h.className.replace(/(\s|^)wf-loading(\s|$)/g, '');
+      h.className += ' wf-inactive';
+    }, TypekitConfig.scriptTimeout);
     var tk = document.createElement('script');
     tk.src = '//use.typekit.com/' + TypekitConfig.kitId + '.js';
     tk.type = 'text/javascript';
@@ -80,6 +87,7 @@
     tk.onload = tk.onreadystatechange = function() {
       var rs = this.readyState;
       if (rs && rs != 'complete' && rs != 'loaded') return;
+      clearTimeout(t);
       try { Typekit.load(TypekitConfig); } catch (e) {}
     };
     var s = document.getElementsByTagName('script')[0];
