completed grid & added branding section to css

--- a/index.html
+++ b/index.html
@@ -108,8 +108,46 @@
 
 <div class="bgdiv"></div>
 
-<div id="wrap">
+			<figure id="grid">
+				<div class="col col1"></div>
+				<div class="col col2"></div>
+				<div class="col col3"></div>
+				<div class="col col4"></div>
+				<div class="col col5"></div>
+				<div class="col col6"></div>
+				<div class="col col7"></div>
+				<div class="col col8"></div>
+				<div class="col col9"></div>
+				<div class="col col10"></div>
+				<div class="col col11"></div>
+				<div class="col col12"></div>
+				<div class="col col13"></div>
+				<div class="col col14"></div>
+				<div class="col col15"></div>
+				<div class="col col16"></div>
+				<div class="col col17"></div>
+				<div class="col col18"></div>
+				<div class="col col19"></div>
+				<div class="col col20"></div>
+				<div class="col col21"></div>
+				<div class="col col22"></div>
+				<div class="col col23"></div>
+				<div class="col col24"></div>
+				<div class="col col25"></div>
+				<div class="col col26"></div>
+				<div class="col col27"></div>
+				<div class="col col28"></div>
+				<div class="col col29"></div>
+				<div class="col col30"></div>
+				<div class="col col31"></div>
+				<div class="col col32"></div>
+				<div class="col col33"></div>
+				<div class="col col34"></div>
+				<div class="col col35"></div>
+				<div class="col col36"></div>
+			</figure>
 
+<section>
 <h1>Heading One, &ldquo;Alpha&rdquo;</h1>
 <h2>Heading Two, &ldquo;Beta&rdquo;</h2>
 <h3>Heading Three, &ldquo;Gamma&rdquo;</h3>
@@ -117,7 +155,7 @@
 <h5>Heading Five, &ldquo;Epsilon&rdquo;</h5>
 <h6>Heading Six, &ldquo;Zeta&rdquo;</h6>
 
-<p>Paragraph. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+<p>Paragraph. Pellentesque <sub>habitant morbi</sub> tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies <sup>mi vitae</sup> est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
 
 <pre><code class="css">
 &lt;meta charset=&quot;utf-8&quot;&gt;    
@@ -181,59 +219,16 @@
 
 <q>Pellentesque habitant morbi tristique senectus <q>et netus et malesuada fames ac</q> turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</q>
 
-			<figure id="grid">
-				<div class="col col1"></div>
-				<div class="col col2"></div>
-				<div class="col col3"></div>
-				<div class="col col4"></div>
-				<div class="col col5"></div>
-				<div class="col col6"></div>
-				<div class="col col7"></div>
-				<div class="col col8"></div>
-				<div class="col col9"></div>
-				<div class="col col10"></div>
-				<div class="col col11"></div>
-				<div class="col col12"></div>
-				<div class="col col13"></div>
-				<div class="col col14"></div>
-				<div class="col col15"></div>
-				<div class="col col16"></div>
-				<div class="col col17"></div>
-				<div class="col col18"></div>
-				<div class="col col19"></div>
-				<div class="col col20"></div>
-				<div class="col col21"></div>
-				<div class="col col22"></div>
-				<div class="col col23"></div>
-				<div class="col col24"></div>
-				<div class="col col25"></div>
-				<div class="col col26"></div>
-				<div class="col col27"></div>
-				<div class="col col28"></div>
-				<div class="col col29"></div>
-				<div class="col col30"></div>
-				<div class="col col31"></div>
-				<div class="col col32"></div>
-				<div class="col col33"></div>
-				<div class="col col34"></div>
-				<div class="col col35"></div>
-				<div class="col col36"></div>
-			</figure>
+</section>
 			
-</div> <!-- end wrap -->
-
 <!-- JavaScript at the bottom for fast page loading -->
 
 <!-- include jquery from google servers, fall back to local if necessary: http://html5boilerplate.com/docs/The-markup/#google-cdn-for-jquery -->
-<!--
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
--->
-
 
 <!-- all plugins and all scripts in one file each, to minimize http requests: http://html5boilerplate.com/docs/plugins.js-and-script.js -->
     <script defer src="js/scripts.js"></script>
-
 
 <!-- asynchronous google analytics (replace UA-XXXXX-X with your analytics code): http://mths.be/aab
     <script>
