implement js for baseline grid overlay
currently keys off of clicking h1

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 <!-- all plugins and all scripts in one file each, to minimize http requests: http://html5boilerplate.com/docs/plugins.js-and-script.js -->
     <script defer src="js/scripts.js"></script>
-
+    <script defer src="js/frameless.js"></script>
 <!-- asynchronous google analytics (replace UA-XXXXX-X with your analytics code): http://mths.be/aab
     <script>
         var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
