start WPP homepage

--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
     <!-- speed up grabbing jquery from google servers: http://html5boilerplate.com/docs/DNS-Prefetching -->
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     
-    <title></title>
+    <title>Web Professional's Primer</title>
     <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- set the canonical url for this page: http://t.co/y1jPVnT -->
-    <link rel="canonical" href="/">
+    <meta name="author" content="Zachary Kain">
 
     <!-- mobile viewport optimization: http://html5boilerplate.com/mobile & http://t.co/dKP3o1e & http://learnthemobileweb.com/2009/07/mobile-meta-tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
