last commit of the night, minor tweaks

--- a/index.html
+++ b/index.html
@@ -137,15 +137,21 @@
 		<div class="col col35"></div>
 		<div class="col col36"></div>
 	</figure>
-	
-<!-- each main element is its own wrapper a set number of columns in width -->
+    <header>
+        <h1>The Web Professional's Primer</h1>
+        <h2 class="epsilon"> There's a lot to keep track of as a web worker. As an industry&mdash;a community&mdash;our body of work is a vast and contradictory canon.</h2>
+        <h2 class="epsilon">The Web Professional's Primer is part field guide, part encyclopedia, and part toolkit: an ongoing attempt to organize and synthesize the collective knowledge and wisdom of the creative community, into a killer reference manual and educational resource. </h2>
+    </header>
+    
+    <nav>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
+
 <section>
-<h1>Heading One, &ldquo;Alpha&rdquo;</h1>
-<h2>Heading Two, &ldquo;Beta&rdquo;</h2>
-<h3>Heading Three, &ldquo;Gamma&rdquo;</h3>
-<h4>Heading Four, &ldquo;Delta&rdquo;</h4>
-<h5>Heading Five, &ldquo;Epsilon&rdquo;</h5>
-<h6>Heading Six, &ldquo;Zeta&rdquo;</h6>
 
 <p>Paragraph. Pellentesque <sub>habitant morbi</sub> tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies <sup>mi vitae</sup> est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
 
@@ -156,6 +162,11 @@
 &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge,chrome=1&quot;&gt;
 </code></pre>
 
+<h2>Heading Two, &ldquo;Beta&rdquo;</h2>
+<h3>Heading Three, &ldquo;Gamma&rdquo;</h3>
+<h4>Heading Four, &ldquo;Delta&rdquo;</h4>
+<h5>Heading Five, &ldquo;Epsilon&rdquo;</h5>
+<h6>Heading Six, &ldquo;Zeta&rdquo;</h6>
 <p>Semantic presentational elements.
     <i>This is an example of the <code>&lt;i&gt;</code> element.</i>
     <b>This is an example of the <code>&lt;b&gt;</code> element.</b>
@@ -212,6 +223,9 @@
 <q>Pellentesque habitant morbi tristique senectus <q>et netus et malesuada fames ac</q> turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</q>
 
 </section>
+
+
+	
 			
 <!-- JavaScript at the bottom for fast page loading -->
 
