remove syntax highlighting

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
  
     <!-- stylesheets (using less.js, either keep the js file or compile before launch) -->    
     <link rel="stylesheet/less" type="text/css" href="css/styles.less">
-
+    
     <!-- modernizr enables html5 elements and media queries in older browsers: http://html5boilerplate.com/docs/The-markup/#modernizr-yepnope-respond -->
     <script src="js/libs/modernizr-custom.js"></script>
 
@@ -160,7 +160,8 @@
 &lt;!-- force best rendering from IE: http://html5boilerplate.com/docs/The-markup/#make-sure-the-latest-version-of-ie-is-used --&gt;
 &lt;!-- should use .htaccess and remove this line: h5bp.com/b/378 --&gt;
 &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge,chrome=1&quot;&gt;
-</code></pre>
+</code>
+</pre>
 
 <h2>Heading Two, &ldquo;Beta&rdquo;</h2>
 <h3>Heading Three, &ldquo;Gamma&rdquo;</h3>
@@ -216,7 +217,7 @@
 	   <dd>Definition list data</dd>
 	<dt>Definition list title</dt>
 	   <dd>Definition list data</dd>
-</dl>	       
+</dl>	      
 
 <blockquote>Pellentesque habitant morbi tristiq feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</blockquote>
 
@@ -242,7 +243,7 @@
         (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
         g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
         s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script> -->
+    </script> -->v
 
 <!-- prompt ie6 users to install chrome frame: http://chromium.org/developers/how-tos/chrome-frame-getting-started -->
     <!--[if lt IE 7 ]>
