--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </script>
 </head>
 
-<body>
+<body class="baseline">
     <!-- elements to generate the grid column visualization -->
 	<figure id="grid">
 		<div class="col col1"></div>
@@ -137,6 +137,7 @@
 		<div class="col col35"></div>
 		<div class="col col36"></div>
 	</figure>
+	
     <header>
         <h1>The Web Professional's Primer</h1>
         <h2 class="epsilon"> There's a lot to keep track of as a web worker. As an industry&mdash;a community&mdash;our body of work is a vast and contradictory canon.</h2>
@@ -156,10 +157,12 @@
 <p>Paragraph. Pellentesque <sub>habitant morbi</sub> tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies <sup>mi vitae</sup> est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
 
 <pre><code class="css">
-&lt;meta charset=&quot;utf-8&quot;&gt;    
-&lt;!-- force best rendering from IE: http://html5boilerplate.com/docs/The-markup/#make-sure-the-latest-version-of-ie-is-used --&gt;
-&lt;!-- should use .htaccess and remove this line: h5bp.com/b/378 --&gt;
-&lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge,chrome=1&quot;&gt;
+    &lt;nav&gt;
+        &lt;ul&gt;
+            &lt;li&gt;&lt;a href=&quot;&quot;&gt;&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href=&quot;&quot;&gt;&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+    &lt;/nav&gt;
 </code>
 </pre>
 
