really about to batten down the hatches and design this thing

--- a/index.html
+++ b/index.html
@@ -98,59 +98,22 @@
 </head>
 
 <body class="baseline">
-    <!-- elements to generate the grid column visualization -->
-	<figure id="grid">
-		<div class="col col1"></div>
-		<div class="col col2"></div>
-		<div class="col col3"></div>
-		<div class="col col4"></div>
-		<div class="col col5"></div>
-		<div class="col col6"></div>
-		<div class="col col7"></div>
-		<div class="col col8"></div>
-		<div class="col col9"></div>
-		<div class="col col10"></div>
-		<div class="col col11"></div>
-		<div class="col col12"></div>
-		<div class="col col13"></div>
-		<div class="col col14"></div>
-		<div class="col col15"></div>
-		<div class="col col16"></div>
-		<div class="col col17"></div>
-		<div class="col col18"></div>
-		<div class="col col19"></div>
-		<div class="col col20"></div>
-		<div class="col col21"></div>
-		<div class="col col22"></div>
-		<div class="col col23"></div>
-		<div class="col col24"></div>
-		<div class="col col25"></div>
-		<div class="col col26"></div>
-		<div class="col col27"></div>
-		<div class="col col28"></div>
-		<div class="col col29"></div>
-		<div class="col col30"></div>
-		<div class="col col31"></div>
-		<div class="col col32"></div>
-		<div class="col col33"></div>
-		<div class="col col34"></div>
-		<div class="col col35"></div>
-		<div class="col col36"></div>
-	</figure>
-	
+
+<div class="topbar"></div>
+
     <header>
-        <h1>The Web Professional's Primer</h1>
-        <h2 class="epsilon"> There's a lot to keep track of as a web worker. As an industry&mdash;a community&mdash;our body of work is a vast and contradictory canon.</h2>
-        <h2 class="epsilon">The Web Professional's Primer is part field guide, part encyclopedia, and part toolkit: an ongoing attempt to organize and synthesize the collective knowledge and wisdom of the creative community, into a killer reference manual and educational resource. </h2>
+        <h1 class="masthead"><span class="zeta">The</span> Web Professional's <span class="huger">Primer</span></h1>
+        <h2 class="gamma">Worried you'll never find that crucial HTML/CSS tidbit again? Your search is over.</h2>
+        <h2 class="epsilon">The Web Professional's Primer is part field guide, part encyclopedia, and part toolkit: an ongoing attempt to organize the collective knowledge of the web community into a killer reference manual, educational resource and curated news hub.</h2>
     </header>
     
-    <nav>
-        <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-        </ul>
-    </nav>
+     <nav>
+         <ul>
+             <li class="delta"><a href="#">Template</a></li>
+             <li class="delta"><a href="#">Beginners</a></li>
+             <li class="delta"><a href="#">About</a></li>
+         </ul>
+     </nav>
 
 <section>
 
@@ -228,7 +191,45 @@
 
 </section>
 
-
+    <!-- elements to generate the grid column visualization -->
+	<figure id="grid">
+		<div class="col col1"></div>
+		<div class="col col2"></div>
+		<div class="col col3"></div>
+		<div class="col col4"></div>
+		<div class="col col5"></div>
+		<div class="col col6"></div>
+		<div class="col col7"></div>
+		<div class="col col8"></div>
+		<div class="col col9"></div>
+		<div class="col col10"></div>
+		<div class="col col11"></div>
+		<div class="col col12"></div>
+		<div class="col col13"></div>
+		<div class="col col14"></div>
+		<div class="col col15"></div>
+		<div class="col col16"></div>
+		<div class="col col17"></div>
+		<div class="col col18"></div>
+		<div class="col col19"></div>
+		<div class="col col20"></div>
+		<div class="col col21"></div>
+		<div class="col col22"></div>
+		<div class="col col23"></div>
+		<div class="col col24"></div>
+		<div class="col col25"></div>
+		<div class="col col26"></div>
+		<div class="col col27"></div>
+		<div class="col col28"></div>
+		<div class="col col29"></div>
+		<div class="col col30"></div>
+		<div class="col col31"></div>
+		<div class="col col32"></div>
+		<div class="col col33"></div>
+		<div class="col col34"></div>
+		<div class="col col35"></div>
+		<div class="col col36"></div>
+	</figure>
 	
 			
 <!-- JavaScript at the bottom for fast page loading -->
@@ -239,7 +240,7 @@
 
 <!-- all plugins and all scripts in one file each, to minimize http requests: http://html5boilerplate.com/docs/plugins.js-and-script.js -->
     <script defer src="js/scripts.js"></script>
-
+    
 <!-- asynchronous google analytics (replace UA-XXXXX-X with your analytics code): http://mths.be/aab
     <script>
         var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
